--- a/SNNavigationController/view_nav_tabbar_nav_view/MyDetailViewController.xib
+++ b/SNNavigationController/view_nav_tabbar_nav_view/MyDetailViewController.xib
@@ -32,6 +32,13 @@
                         <action selector="handleButton:" destination="-1" eventType="touchUpInside" id="woo-S4-PHf"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0HE-fE-KcE">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <color key="backgroundColor" red="0.85098039219999999" green="0.67843137249999996" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="gZq-x5-YlI"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -40,6 +47,9 @@
                 <constraint firstItem="AeI-vm-OMZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="CEY-rk-kdo"/>
                 <constraint firstItem="OqK-0z-HId" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Ddd-mG-Obk"/>
                 <constraint firstItem="OqK-0z-HId" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="RTM-84-9tg"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0HE-fE-KcE" secondAttribute="trailing" id="SGR-A6-Asm"/>
+                <constraint firstItem="0HE-fE-KcE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="kDu-hU-fIx"/>
+                <constraint firstItem="0HE-fE-KcE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ndk-1G-Zhi"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="OqK-0z-HId" secondAttribute="trailing" id="rrn-rf-lZP"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
